<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="true"
        android:layout_marginTop="@dimen/dimen_10"
        android:padding="@dimen/dimen_30"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/parent_liner_layout"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_weight=".2"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dimen_10"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_nosTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/bill_no"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shg_idsTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/shg_id"
                        android:layout_below="@+id/bill_nosTV"
                        android:layout_marginTop="@dimen/dimen_10"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_datesTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/bill_date"
                        android:layout_below="@+id/shg_namesTV"
                        android:layout_marginTop="@dimen/dimen_10"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_timesTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/bill_time"
                        android:layout_below="@+id/bill_datesTV"
                        android:layout_marginTop="@dimen/dimen_10"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shg_namesTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/total_bill"
                        android:layout_below="@+id/shg_idsTV"
                        android:layout_marginTop="@dimen/dimen_10"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.8"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_noTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/bill_no"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dimen_10"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shg_idTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/shg_id"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dimen_10"
                        android:layout_below="@+id/bill_noTV"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_dateTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/bill_date"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dimen_10"
                        android:layout_below="@+id/shg_nameTV"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bill_timeTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/bill_time"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dimen_10"
                        android:layout_below="@+id/bill_dateTV"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/total_billTV"
                        android:textSize="@dimen/text_size_large"
                        android:text="@string/total_bill"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dimen_10"
                        android:layout_below="@+id/shg_idTV"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_below="@+id/parent_liner_layout"
                >
                <TextView
                    android:id="@+id/delete_bill"
                    android:layout_width="@dimen/dimen_150"
                    android:layout_height="@dimen/dimen_30"
                    android:background="@drawable/shape_rounded"
                    android:text="@string/delete_bill"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/dimen_10"
                   />
                <Button
                    android:id="@+id/product_detailsBTN"
                    android:layout_width="@dimen/dimen_150"
                    android:layout_height="@dimen/dimen_30"
                    android:text="@string/product_details"
                    android:background="@drawable/shape_rounded"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_15"
                    />

            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>